AM_CFLAGS =
AM_CPPFLAGS = -Wall -Werror
ACLOCAL_AMFLAGS = -I m4
hardware_platform = i686-linux-gnu
noinst_LTLIBRARIES = libutil_api_AnscCoVer3.la
libutil_api_AnscCoVer3_ladir = $(top_builddir)/source/util_api/.libs
libutil_api_AnscCoVer3_la_CPPFLAGS = -I$(top_builddir)/source/util_api/tls/include -I$(top_builddir)/source/util_api/stun/include -I$(top_builddir)/source/util_api/ansc/include -I$(top_builddir)/source/util_api/web/include -I$(top_builddir)/source/util_api/asn.1/include -I$(top_builddir)/source/util_api/http/utilities/include -I$(top_builddir)/source/util_api/http/include $(CPPFLAGS)
libutil_api_AnscCoVer3_la_SOURCES = ansc_cover3_engine.c ansc_cover3_base.c
libutil_api_AnscCoVer3_la_LDFLAGS = 
