AM_CFLAGS = 

AM_CPPFLAGS = -Wall -Werror

ACLOCAL_AMFLAGS = -I m4

hardware_platform = i686-linux-gnu

lib_LTLIBRARIES = lib_utilapi_ansccomponentobject.la
#bin_PROGRAMS =

lib_utilapi_ansccomponentobject_ladir = $(top_builddir)/source/.libs

lib_utilapi_ansccomponentobject_la_CPPFLAGS = -I$(top_builddir)/source/util_api/include $(CPPFLAGS)

lib_utilapi_ansccomponentobject_la_SOURCES = \
    AnscComponentObject/ansc_co_base.c \

lib_utilapi_ansccomponentobject_la_LDFLAGS =
