AM_CFLAGS =
AM_CPPFLAGS = -Wall -Werror
ACLOCAL_AMFLAGS = -I m4
hardware_platform = i686-linux-gnu
noinst_LTLIBRARIES = libutil_api_AnscCrypto.la
libutil_api_AnscCrypto_ladir = $(top_builddir)/source/util_api/.libs
libutil_api_AnscCrypto_la_CPPFLAGS = -I$(top_builddir)/source/util_api/tls/include -I$(top_builddir)/source/util_api/stun/include -I$(top_builddir)/source/util_api/ansc/include -I$(top_builddir)/source/util_api/web/include -I$(top_builddir)/source/util_api/asn.1/include -I$(top_builddir)/source/util_api/http/utilities/include -I$(top_builddir)/source/util_api/http/include $(CPPFLAGS)
libutil_api_AnscCrypto_la_SOURCES = ansc_crypto_random.c ansc_crypto_encryption.c ansc_crypto_interface.c ansc_crypto_digestion.c ansc_crypto_base.c ansc_crypto_compression.c ansc_crypto_utility.c ansc_crypto_decompression.c ansc_crypto_hash.c ansc_crypto_key.c ansc_crypto_decryption.c
libutil_api_AnscCrypto_la_LDFLAGS = 
