AM_CFLAGS =
AM_CPPFLAGS = -Wall -Werror
ACLOCAL_AMFLAGS = -I m4
hardware_platform = i686-linux-gnu
noinst_LTLIBRARIES = libutil_api_AnscDaemonEngineTcp.la
libutil_api_AnscDaemonEngineTcp_ladir = $(top_builddir)/source/util_api/.libs
libutil_api_AnscDaemonEngineTcp_la_CPPFLAGS = -I$(top_builddir)/source/util_api/tls/include -I$(top_builddir)/source/util_api/stun/include -I$(top_builddir)/source/util_api/ansc/include -I$(top_builddir)/source/util_api/web/include -I$(top_builddir)/source/util_api/asn.1/include -I$(top_builddir)/source/util_api/http/utilities/include -I$(top_builddir)/source/util_api/http/include $(CPPFLAGS)
libutil_api_AnscDaemonEngineTcp_la_SOURCES = ansc_deto_operation.c ansc_deto_process.c ansc_deto_management.c ansc_deto_interface.c ansc_deto_send.c ansc_deto_states.c ansc_deto_base.c ansc_deto_recv.c
libutil_api_AnscDaemonEngineTcp_la_LDFLAGS = 
