AM_CFLAGS =
AM_CPPFLAGS = -Wall -Werror
ACLOCAL_AMFLAGS = -I m4
hardware_platform = i686-linux-gnu
noinst_LTLIBRARIES = libutil_api_AnscDaemonServerUdp.la
libutil_api_AnscDaemonServerUdp_ladir = $(top_builddir)/source/util_api/.libs
libutil_api_AnscDaemonServerUdp_la_CPPFLAGS = -I$(top_builddir)/source/util_api/tls/include -I$(top_builddir)/source/util_api/stun/include -I$(top_builddir)/source/util_api/ansc/include -I$(top_builddir)/source/util_api/web/include -I$(top_builddir)/source/util_api/asn.1/include -I$(top_builddir)/source/util_api/http/utilities/include -I$(top_builddir)/source/util_api/http/include $(CPPFLAGS)
libutil_api_AnscDaemonServerUdp_la_SOURCES = ansc_dsuo_operation.c ansc_dsuo_interface.c ansc_dsuo_management.c ansc_dsuo_states.c ansc_dsuo_worker.c ansc_dsuo_process.c ansc_dsuo_base.c ansc_dsuo_accept.c
libutil_api_AnscDaemonServerUdp_la_LDFLAGS = 
