AM_CFLAGS = 

AM_CPPFLAGS = -Wall -Werror

ACLOCAL_AMFLAGS = -I m4

hardware_platform = i686-linux-gnu

lib_LTLIBRARIES = lib_utilapi_anscdaemonsockettcp.la
#bin_PROGRAMS =

lib_utilapi_anscdaemonsockettcp_ladir = $(top_builddir)/source/.libs

lib_utilapi_anscdaemonsockettcp_la_CPPFLAGS = -I$(top_builddir)/source/util_api/include $(CPPFLAGS)

lib_utilapi_anscdaemonsockettcp_la_SOURCES = \
    ansc_dkto_base.c \
    ansc_dkto_interface.c \
    ansc_dkto_operation.c \
    ansc_dkto_process.c \
    ansc_dkto_states.c \
    ansc_dkto_tsaif.c \

lib_utilapi_anscdaemonsockettcp_la_LDFLAGS =
