AM_CFLAGS = 

AM_CPPFLAGS = -Wall -Werror

ACLOCAL_AMFLAGS = -I m4

hardware_platform = i686-linux-gnu

lib_LTLIBRARIES = lib_utilapi_anscdaemonsocketudp.la
#bin_PROGRAMS =

lib_utilapi_anscdaemonsocketudp_ladir = $(top_builddir)/source/.libs

lib_utilapi_anscdaemonsocketudp_la_CPPFLAGS = -I$(top_builddir)/source/util_api/include $(CPPFLAGS)

lib_utilapi_anscdaemonsocketudp_la_SOURCES = \
    ansc_dkuo_base.c \
    ansc_dkuo_interface.c \
    ansc_dkuo_operation.c \
    ansc_dkuo_process.c \
    ansc_dkuo_states.c \

lib_utilapi_anscdaemonsocketudp_la_LDFLAGS =
