AM_CFLAGS = 

AM_CPPFLAGS = -Wall -Werror

ACLOCAL_AMFLAGS = -I m4

hardware_platform = i686-linux-gnu

lib_LTLIBRARIES = lib_utilapi_ansclightcomponent.la
#bin_PROGRAMS =

lib_utilapi_ansclightcomponent_ladir = $(top_builddir)/source/.libs

lib_utilapi_ansclightcomponent_la_CPPFLAGS = -I$(top_builddir)/source/util_api/include $(CPPFLAGS)

lib_utilapi_ansclightcomponent_la_SOURCES = \
    ansc_lco_base.c

lib_utilapi_ansclightcomponent_la_LDFLAGS =
