AM_CFLAGS =
AM_CPPFLAGS = -Wall -Werror
ACLOCAL_AMFLAGS = -I m4
hardware_platform = i686-linux-gnu
noinst_LTLIBRARIES = libutil_api_AnscLpccoTcp.la
libutil_api_AnscLpccoTcp_ladir = $(top_builddir)/source/util_api/.libs
libutil_api_AnscLpccoTcp_la_CPPFLAGS = -I$(top_builddir)/source/util_api/tls/include -I$(top_builddir)/source/util_api/stun/include -I$(top_builddir)/source/util_api/ansc/include -I$(top_builddir)/source/util_api/web/include -I$(top_builddir)/source/util_api/asn.1/include -I$(top_builddir)/source/util_api/http/utilities/include -I$(top_builddir)/source/util_api/http/include $(CPPFLAGS)
libutil_api_AnscLpccoTcp_la_SOURCES = ansc_lpccotcp_recv.c ansc_lpccotcp_dstowo.c ansc_lpccotcp_bstowo.c ansc_lpccotcp_operation.c ansc_lpccotcp_send.c ansc_lpccotcp_base.c ansc_lpccotcp_interface.c ansc_lpccotcp_states.c ansc_lpccotcp_imcif.c
libutil_api_AnscLpccoTcp_la_LDFLAGS = 
