AM_CFLAGS = 

AM_CPPFLAGS = -Wall -Werror

ACLOCAL_AMFLAGS = -I m4

hardware_platform = i686-linux-gnu

lib_LTLIBRARIES = lib_utilapi_anscobjectcontainer.la
#bin_PROGRAMS =

lib_utilapi_anscobjectcontainer_ladir = $(top_builddir)/source/.libs

lib_utilapi_anscobjectcontainer_la_CPPFLAGS = -I$(top_builddir)/source/util_api/include $(CPPFLAGS)

lib_utilapi_anscobjectcontainer_la_SOURCES = \
    ansc_oco_base.c \
    ansc_oco_extension.c \
    ansc_oco_feature.c \
    ansc_oco_interface.c \
    ansc_oco_objects.c \
    ansc_oco_operation.c \
    ansc_oco_states.c \
    ansc_oco_timers.c \

lib_utilapi_anscobjectcontainer_la_LDFLAGS =
