AM_CFLAGS =
AM_CPPFLAGS = -Wall -Werror
ACLOCAL_AMFLAGS = -I m4
hardware_platform = i686-linux-gnu
noinst_LTLIBRARIES = libutil_api_AnscObjectContainer.la
libutil_api_AnscObjectContainer_ladir = $(top_builddir)/source/util_api/.libs
libutil_api_AnscObjectContainer_la_CPPFLAGS = -I$(top_builddir)/source/util_api/tls/include -I$(top_builddir)/source/util_api/stun/include -I$(top_builddir)/source/util_api/ansc/include -I$(top_builddir)/source/util_api/web/include -I$(top_builddir)/source/util_api/asn.1/include -I$(top_builddir)/source/util_api/http/utilities/include -I$(top_builddir)/source/util_api/http/include $(CPPFLAGS)
libutil_api_AnscObjectContainer_la_SOURCES = ansc_oco_objects.c ansc_oco_states.c ansc_oco_feature.c ansc_oco_interface.c ansc_oco_base.c ansc_oco_operation.c ansc_oco_extension.c ansc_oco_timers.c
libutil_api_AnscObjectContainer_la_LDFLAGS = 
